# web-automation

./: .gitignore  LICENSE  Makefile  README.md  main.py  pyproject.toml
browser/: __init__.py
src/: main.py
src/browser/: __init__.py  browser.py  chrome.py  ec.py
src/utils/: __init__.py  sms.py
utils/: __init__.py
